# crackers

./: Cargo.toml  LICENSE  README.md
.github/: funding.yml
cli/: Cargo.toml  config.rs  main.rs
cli/config/: loglevel.rs  transformers.rs  validator.rs
crackers/: Cargo.toml  bytes.rs  config.rs  lib.rs  transformers.rs  unsafe_magic.rs  validators.rs
crackers/bytes/: arr.rs  bytes.rs
crackers/transformers/: md5.rs  mod.rs  sha1.rs  sha256.rs
llvm/: Cargo.toml  lib.rs
