[package]
name = "crackers"
version = "0.1.0"
edition = "2021"

[lib]
name = "crackers"
path = "lib.rs"

[dependencies.llvm] # For LLVM optimization
package = "nudge"
version = "0.2"
default-features = false
features = ["nightly"]

[dependencies]
# Core dependencies
digest = "0.10"

# Optional dependencies
sha-1 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = ["sha1", "md5", "sha2"]

# Optional dependencies
sha1 = ["dep:sha-1"]
md5 = ["dep:md-5"]
sha2 = ["dep:sha2"]
