[package]
name = "crackers"
version = "0.1.0"
edition = "2021"

[lib]
name = "crackers"
path = "lib.rs"

[dependencies.llvm]
path = "../llvm"

[dependencies]
# Core dependencies
digest = "0.10"
log = "0.4"
hex = "0.4"

# Optional dependencies
[dependencies.sha-1]
version = "0.10"
optional = true

[dependencies.md-5]
version = "0.10"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[features]
default = ["sha1", "md5", "sha2"]

# Optional dependencies
sha1 = ["dep:sha-1"]
md5 = ["dep:md-5"]
sha2 = ["dep:sha2"]
